<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/background_list_item">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/note_list_item__tools__note_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_added_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_note_text"
        tools:text="@string/note_list_item__tools__added_date_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_note_text"
        android:text="@string/note_list_item__label__page_text"/>

    <View
        android:id="@+id/split_1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_added_date" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_remove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="6dp"
        android:scaleType="fitCenter"
        android:background="@drawable/background_button"
        android:src="@drawable/ic_button_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split_1" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_edit"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="6dp"
        android:scaleType="fitCenter"
        android:background="@drawable/background_button"
        android:src="@drawable/ic_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split_1" />

</androidx.constraintlayout.widget.ConstraintLayout>